tests/ui/endpoint-error-operation-removed.stderr
error[E0599]: no method named `operation` found for struct `EndpointError` in the current scope
 --> tests/ui/endpoint-error-operation-removed.rs:2:19
  |
2 |     let _ = error.operation();
  |                   ^^^^^^^^^ method not found in `EndpointError`
