tests/ui/endpoint-error-operation-removed.rs
fn touch(error: hibana::EndpointError) {
    let _ = error.operation();
}

fn main() {}
